Finalize RAG pipeline with grounded answers and strict fallback handling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -175,7 +175,7 @@
         document.getElementById("answerText").innerText = data.answer;
         document.getElementById("answerBox").classList.remove("hidden");
 
-        // Sources (ALL sources, clean)
+        // Sources
         const sourcesBox = document.getElementById("sourcesBox");
         const list = document.getElementById("sourcesList");
         list.innerHTML = "";
