--- a/frontend/index.html
+++ b/frontend/index.html
@@ -111,7 +111,9 @@
     <textarea id="question" placeholder="Ask a question (e.g., What happens if a student commits plagiarism?)"></textarea>
 
     <div class="buttons">
-        <button id="indexBtn" class="secondary" onclick="buildIndex()">Build Index</button>
+        <button id="indexBtn" class="secondary" disabled>
+            Index Prebuilt
+        </button>
         <button onclick="askQuestion()">Ask Question</button>
     </div>
 
